[package]
name = "hearty"
version = "0.1.5"
edition = "2024"
description = "Check HOI4 mod files for missing localisations"
license = "MIT"
repository = "https://github.com/Jonathan/hearty"
keywords = ["hoi4", "localisation", "mod"]
categories = ["command-line-utilities"]

[dependencies]
walkdir = "2.5.0"
rayon = "1.11.0"
indicatif = "0.18.4"
itertools = "0.14.0"
jomini = { version = "0.34.1", features = ["envelope"] }
clap = { version = "4", features = ["derive"] }
displaydoc = "0.2.5"
miette = { version = "7", features = ["fancy"] }
thiserror = "2.0.18"
semver = "1.0.28"
keyvalues-parser = "0.2.3"
serde_json = "1.0.149"